--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <path id="shape" d="M20,20H280V130H20Z" />
           </defs>
           <text fill = "white">
-            <textPath xlink:href="#shape">Love Death Design is a collective of researchers, activists, designers and writers collaborating remotely to create immersive experiences that challenge systemic injustice and environmental issues. 
+            <textPath xlink:href="#shape">LoveDeathDesign is a remote creative studio developing immersive experiences to challenge systemic injustice and raise awareness around environmental issues. 
               <animate attributeName="startOffset" from="5" to="-300" dur="12s" repeatCount="indefinite" />
             </textPath>
           </text>
