--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
 </head>
 <body>
 
+  <div class="header-wrapper">
+    <div id="main-navigation">     
+    <a href="#" class="logo">Love Death Design</a>
+    <label for="toggle">
+        <img src="https://cdn4.iconfinder.com/data/icons/basic-user-interface-2/512/User_Interface-03-512.png" alt="menu toggle button" id="toggleButton">
+    </label>
+    <input type="checkbox" id="toggle">
+        <ul>
+            <li><a href="index.html">crew</a></li>
+            <li><a href="services.html">projects</a></li>
+            <li><a href="contact.html">contact</a></li>
+        </ul>
+    </div></div>
+
 
 
 <div class="hero">
